install(FILES 32/online-account-fastmail.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/32x32/apps)
install(FILES 48/online-account-fastmail.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/48x48/apps)
install(FILES fastmail.provider DESTINATION ${ACCOUNTS_DIR}/providers/)
install(FILES fastmail-mail.service DESTINATION ${ACCOUNTS_DIR}/services/)
