# Install the provider
install_data(
    'fastmail.provider',
    install_dir: providers_dir
)

# Install the services
install_data(
    'fastmail-mail.service',
    install_dir: services_dir,
)

# Install the icons
install_data(
    '32/online-account-fastmail.svg',
    install_dir: join_paths(hicolor_dir, '32x32', 'apps'),
)

install_data(
    '48/online-account-fastmail.svg',
    install_dir: join_paths(hicolor_dir, '48x48', 'apps'),
)
