# Install the provider
install_data(
    'lastfm.provider',
    install_dir: providers_dir
)

# Install the services
install_data(
    'lastfm-scrobble.service',
    install_dir: services_dir,
)

# Install the icons
install_data(
    'online-account-lastfm.svg',
    install_dir: join_paths(hicolor_dir, '48x48', 'apps'),
)
